# calc-work-time

./: .gitignore  pyproject.toml
src/calc_work_time/: main.py
tests/: test_calc_work_time.py
