[tool.poetry]
name = "calc-work-time"
version = "0.1.0"
description = "Working time calculator"
authors = ["kohei kawazoe <a04272017@gmail.com>"]
readme = "README.md"
packages = [{include = "calc_work_time", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
